package com.example.buildingcontrols.models;

public enum CommonRoomType {
    GYM,
    LIBRARY,
    LAUNDRY
}
